--- a/public/sub_main.html
+++ b/public/sub_main.html
@@ -15,8 +15,14 @@
 
   <!-- SWIPER 외부 라이브러리 연결-->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G5XZB713D0');
+  </script>
 </head>
 <body>
   <div class="container">
