--- a/public/main.html
+++ b/public/main.html
@@ -14,6 +14,14 @@
   <!-- SWIPER 외부 라이브러리 연결-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G5XZB713D0');
+  </script>
 </head>
 <body>
   <div class="container">
@@ -50,11 +58,11 @@
                 <div>
                   <span>{{review_item.Corp_name}}</span>
                   {% if review_item.last_date == '9999-12' %}
-                  <span>현직원</span>
+                  <span class="mo_none tab_show">현직원</span>
                   {% else %}
-                  <span>전직원</span>
+                  <span class="mo_none tab_show">전직원</span>
                   {% endif %}                
-                  <span>{{review_item.date}}</span>  
+                  <span class="mo_none tab_show">{{review_item.date}}</span>  
                 </div>
                 <p>{{review_item.highlight}}</p>
                 <button type="button" onclick="location.href='/review/corp/{{review_item.Corp_name}}'">더보기</button>
@@ -104,11 +112,11 @@
           </div>
           <ul class="detail-top5">
             {% for detail in detail10.slice(0,5) %}
-            <li class="detail-top5-item" onclick="location.href='/review/corp/{{detail.name}}'">
+            <li class="detail-top5-item">
               <div class="detail-top5-no">{{loop.index}}</div>
               <div class="detail-top5-content">
                 <div class="detail-top5-corp">
-                  <p>{{detail.name}}</p>
+                  <p onclick="location.href='/review/corp/{{detail.name}}'">{{detail.name.slice(0,12)}}</p>
                   <p>{{detail.city}} {{detail.gugun}}</p>
                 </div>
                 <div class="detail-top5-highlight">
@@ -169,6 +177,7 @@
   <footer>
     <footer-component></footer-component>
   </footer>
+  <totop-component></totop-component>
   <script type="module" src="/js/webcomponent.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
