--- a/public/mypage_review.html
+++ b/public/mypage_review.html
@@ -11,6 +11,14 @@
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/webcomponent.css" rel="stylesheet">
   <link href="/styles/mypage_review.css" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G5XZB713D0');
+  </script>
 </head>
 <body>
   <div class="container">
