fix: 리뷰, 경력 경력사항 분리

--- a/public/login.html
+++ b/public/login.html
@@ -38,13 +38,13 @@
                     <input type="password" name="password" id="userpw" autocomplete="off" style="ime-mode:disabled" placeholder="비밀번호를 입력하세요" required>
                   </fieldset>
                 </form>
-                <div class="login_option">
+                <!-- <div class="login_option">
                   <div class="save_id">
                     <input type="checkbox" id="saveId">
                     <label for="saveId">아이디 저장</label>  
                   </div>
                   <button type="button">아이디/비밀번호 찾기</button>  
-                </div>
+                </div> -->
               </div>
               <button type="submit" class="" id="submit_user" form="form_user" disabled="disabled">로그인</button>
             </div>
