--- a/public/modify_review.html
+++ b/public/modify_review.html
@@ -29,7 +29,7 @@
 				<div class="corp_info_wrap">
 					<div class="div_line"></div>
 					<div class="corp_info">
-						<div class="corp_info_image">{{기업이미지}}</div>
+						<div class="corp_info_image"><img src="/styles/images/ico_building.png"></div>
 						<div class="corp_info_data">
 							<div>
 								<span>{{Corp.name}}</span>
