--- a/public/mypage_profile.html
+++ b/public/mypage_profile.html
@@ -102,7 +102,7 @@
           <div>
             <strong class="career-year"></strong>
             년
-            <strong class="career-month">10</strong>
+            <strong class="career-month"></strong>
             개월
           </div>
         </div>
