--- a/public/signup.html
+++ b/public/signup.html
@@ -36,17 +36,17 @@
           <div class="write_base">
             <!-- 아이디 -->
             <div class="item">
-              <label for="id">이메일(ID)</label>
+              <label for="id">이메일(ID)<span style="color: red;">*</span></label>
               <div>
                 <input type="email" name="id" id="id" clsss="" maxlength="40" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="이메일(ID)를 입력해주세요." required>
-                <button class="req-btn" disabled="disabled">인증요청</button>
+                <button type="button" class="req-btn" disabled="disabled">인증요청</button>
               </div>
               <div class="checkmsg" id="checkidmsg" style="display: none;"></div>
             </div>
             <div class="item checkEmail">
               <div>
                 <input type="text" class="authCode-input" maxlength="40" style="ime-mode:disabled" autocapitalize="off" autocomplete="off" placeholder="인증번호를 입력해주세요." required>
-                <button class="confirm-btn" disabled="disabled">확인</button>
+                <button type="button" class="confirm-btn" disabled="disabled">확인</button>
               </div>
               <div class="checkmsg" id="checkidmsg" style="display: none;"></div>
             </div>
