--- a/public/write_detail.html
+++ b/public/write_detail.html
@@ -67,7 +67,7 @@
 						<form class="review_form" id="review_form" method="post" action="/review/write/corp/{{Corp.name}}" onsubmit="return confirmSubmit()">
 							<div class="working_info">
 								<div class="period">
-									<label>근무기간</label>
+									<label>근무기간 <span style="color: red;">*</span></label>
 									<div>
 										<div>
 											<div>
@@ -90,7 +90,7 @@
 									</div>	
 								</div>
 								<div class="work_type">
-									<label for="work_type">근무직종</label>
+									<label for="work_type">근무직종 <span style="color: red;">*</span></label>
 									<select id="work_type" name="work_type" required>
 										<option value="" selected disabled hidden>직종 선택</option>
 										<option value="사회복지사">사회복지사</option>
@@ -223,7 +223,7 @@
 							</div>
 							<div class="write_review">
 								<div class="write_item">
-									<label for="highlight">한줄평</label>
+									<label for="highlight">한줄평 <span style="color: red;">*</span></label>
 									<div>
 										<input name="highlight" type="text" id="highlight" 
 										maxlength="50"
@@ -231,17 +231,17 @@
 									</div>
 								</div>
 								<div class="write_item">
-									<label for="pros">장점</label>
+									<label for="pros">장점 <span style="color: red;">*</span></label>
 									<div>
 										<span id="pros_cnt">현재 글자수:000자</span>
-										<textarea name="pros" type="text" id="pros" placeholder="근무했던 기관의 장점을 작성해주세요 (최소 50자)" required></textarea>
+										<textarea name="pros" type="text" id="pros" minlength="30" maxlength="2000" placeholder="근무했던 기관의 장점을 작성해주세요 (최소 30자)" required></textarea>
 									</div>
 								</div>
 								<div class="write_item">
-									<label for="cons">단점</label>
+									<label for="cons">단점 <span style="color: red;">*</span></label>
 									<div>
 										<span id="cons_cnt">현재 글자수:000자</span>
-										<textarea name="cons" type="text" id="cons" placeholder="근무했던 기관의 단점을 작성해주세요 (최소 50자)" required></textarea>
+										<textarea name="cons" type="text" id="cons" minlength="30" maxlength="2000" placeholder="근무했던 기관의 단점을 작성해주세요 (최소 30자)" required></textarea>
 									</div>
 								</div>
 							</div>
@@ -249,8 +249,8 @@
 						<button type="submit" form="review_form" id="btnSubmit" disabled="disabled">제출</button>
 					</div>
 					<div class="sidebar">
-						<div>광고</div>
-						<div>광고</div>
+						<div></div>
+						<div></div>
 					</div>
 				</div>
 			</main>
