--- a/public/mypage_profile.html
+++ b/public/mypage_profile.html
@@ -37,7 +37,7 @@
         <h1>기본정보</h1>
         <div class="user-data">
           <div class="id-card">
-            <img src="/styles/images/profile.png" alt="프로필사진">
+            <img src="/styles/images/profile.png" alt="프로필사진" onclick="changeUserImage()">
             <div class="user-id">
               <p>{{info[0].nickname}}</p>
               <p>{{info[0].id}}</p>  
@@ -159,7 +159,6 @@
               </div>
             </fieldset>
             <div class="btn-line">
-              <a href="/mypage/review" class="content-font bold">내가 쓴 리뷰</a>
               <button form="career{{loop.index}}" type="submit" onclick="return changeCareer(event, 'career{{loop.index}}')">수정</button>
             </div>
           </form>
@@ -170,9 +169,17 @@
             <fieldset>
               <div class="career-item career-corpname">
                 <label class="content-font bold">기관명</label>
-                <input type="text" 
-                id="add-corpname"
-                class="content-font" name="corp_name" placeholder="기관명을 입력해주세요." value="" required>
+                <div class="career-corplist">
+                  <input type="text" 
+                  id="add-corpname"
+                  class="content-font" name="corp_name" placeholder="기관명을 입력해주세요." value="" autocomplete="off" required>
+                  <ul class="auto_corp" style="display: none;">
+                  </ul>	
+                  <div class="register" style="display: none;">
+                    <span>찾으시는 기관이 없나요?</span>
+                    <span class="btn_addCorp">기관 등록하기</span>
+                  </div>
+                </div>
               </div>
               <div class="career-item career-period">
                 <label class="content-font bold">근무기간</label>
@@ -209,17 +216,17 @@
               </div>
             </fieldset>
             <div class="btn-line">
-              <a href="#" class="content-font bold">내가 쓴 리뷰</a>
               <button type="submit">추가</button>
             </div>
           </form>
+          <register-modal></register-modal>
         </div>
       </section>
-      <div class="modal-box" style="display: none;">
-        <div class="modal-wrap">
-          <div class="modal-header">
+      <div class="pw-modal-box" style="display: none;">
+        <div class="pw-modal-wrap">
+          <div class="pw-modal-header">
             <span>비밀번호 변경</span>
-            <button class="modal_cancel" type="reset" onclick="modal_none();">
+            <button class="pw-modal_cancel" type="reset" onclick="modal_none();">
               <img src="../styles/images/cancel.png", alt="닫기">
             </button>
           </div>
@@ -263,6 +270,9 @@
   <totop-component></totop-component>
   <script type="module" src="/js/webcomponent.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
   <script defer src="/js/mypage_profile.js"></script>
+  <script defer src="/js/modules.js"></script>
 </body>
 </html>
