--- a/public/modify_review.html
+++ b/public/modify_review.html
@@ -95,10 +95,13 @@
 								<div class="work_type">
 									<label for="work_type">근무직종 <span style="color: red;">*</span></label>
 									<select id="work_type" name="work_type"required>
-										<option value="" selected disabled hidden>직종 선택</option>
-										<option value="사회복지사">사회복지사</option>
-										<option value="사무원">사무원</option>
-										<option value="영양사">영양사</option>
+										{% for type in Type %}
+											{% if type.type == Review.type %}
+											<option value="{{type.type}}" selected>{{type.type}}</option>
+											{% else %}
+											<option value="{{type.type}}">{{type.type}}</option>
+											{% endif %}
+										{% endfor %}
 									</select>
 								</div>
 							</div>
