--- a/public/write_detail.html
+++ b/public/write_detail.html
@@ -93,9 +93,9 @@
 									<label for="work_type">근무직종 <span style="color: red;">*</span></label>
 									<select id="work_type" name="work_type" required>
 										<option value="" selected disabled hidden>직종 선택</option>
-										<option value="사회복지사">사회복지사</option>
-										<option value="사무원">사무원</option>
-										<option value="영양사">영양사</option>
+										{% for type in Type %}
+										<option value="{{type.type}}">{{type.type}}</option>
+										{% endfor %}
 									</select>	
 								</div>
 							</div>
