--- a/public/mypage_profile.html
+++ b/public/mypage_profile.html
@@ -11,6 +11,8 @@
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/webcomponent.css" rel="stylesheet">
   <link href="/styles/mypage.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/plugins/monthSelect/style.css">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
   <script>
@@ -122,7 +124,7 @@
                     <div>
                       <label class="content-font-small">입사일</label>
                     </div>
-                    <input type="month" max="YYYY-MM"
+                    <input type="text"
                     class="first-date" name="first_date" value="{{c.first_date}}">
                   </div>
                   <div>
@@ -134,7 +136,7 @@
                         <label class="content-font-small">재직중</label>
                       </div>
                     </div>
-                    <input type="month" max="YYYY-MM"
+                    <input type="text"
                     class="last-date" name="last_date" value="{{c.last_date}}" style="display: none;">
                     {% else %}
                     <div class="quit">
@@ -144,7 +146,7 @@
                         <label class="content-font-small">재직중</label>
                       </div>
                     </div>
-                    <input type="month" max="YYYY-MM" class="last-date" name="last_date" value="{{c.last_date}}">
+                    <input type="text" class="last-date" name="last_date" value="{{c.last_date}}">
                     {% endif %}
                   </div>
                 </div>
@@ -194,20 +196,17 @@
                     <div>
                       <label class="content-font-small">입사일</label>
                     </div>
-                    <input type="month" max="YYYY-MM" 
-                    class="first-date-add" id="first_date_add" name="first_date" value="" required>
+                    <input type="type" class="first-date" id="first_date_add" name="first_date" value="" required>
                   </div>
                   <div>
                     <div class="quit">
                       <label class="content-font-small">퇴사일</label>
                       <div>
-                        <input type="checkbox" class="working-add">
+                        <input type="checkbox" class="working">
                         <label class="content-font-small">재직중</label>
                       </div>
                     </div>
-                    <input type="month" max="YYYY-MM"
-                    class="last-date-add" 
-                    id="last_date_add" name="last_date" value="" required>
+                    <input type="type" class="last-date" id="last_date_add" name="last_date" value="" required>
                   </div>
                 </div>
               </div>
@@ -278,6 +277,9 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr@latest/dist/l10n/ko.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr@latest/dist/plugins/monthSelect/index.js"></script>
   <script defer src="/js/mypage_profile.js"></script>
   <script defer src="/js/modules.js"></script>
 </body>
