--- a/public/write_detail.html
+++ b/public/write_detail.html
@@ -11,6 +11,8 @@
 		<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
 		<link href="/styles/webcomponent.css" rel="stylesheet">
 		<link href="/styles/write_detail.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/plugins/monthSelect/style.css">
 		<!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G5XZB713D0"></script>
     <script>
@@ -75,17 +77,17 @@
 												<div>
 												</div>
 											</div>
-											<input type="month" max="YYYY-MM" id="first_date" name="first_date" required>
+											<input type="type" class="first-date" id="first_date" name="first_date" value="" required>
 										</div>
 										<div>
 											<div>
 												<label for="last_date" class="quit">퇴사일</label>
 												<div class="working">
-													<input type="checkbox" id="working">
+													<input type="checkbox" class="working" id="working">
 													<label for="working">재직중</label>
 												</div>
 											</div>
-											<input type="month" max="YYYY-MM" id="last_date" name="last_date" required>
+											<input type="type" class="last-date" id="last_date" name="last_date" value="" required>
 										</div>
 									</div>	
 								</div>
@@ -261,6 +263,11 @@
 		<totop-component></totop-component>
 		<script type="module" src="/js/webcomponent.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+		<script src="https://cdn.jsdelivr.net/npm/flatpickr@latest/dist/l10n/ko.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/flatpickr@latest/dist/plugins/monthSelect/index.js"></script>	
 		<script defer src="/js/write_detail.js"></script>
+		<script defer src="/js/modules.js"></script>
 	</body>
 </html>
