fix: mo input 확대방지 적용

--- a/public/write_search.html
+++ b/public/write_search.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0">
 		<meta property="og:title" content="NeedU"/>
 		<meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
 		<meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/39be237d-699c-42fc-aa1b-8b3e4fe22cfe"/>
